fix spacing

--- a/components/Layout/Navigation.css
+++ b/components/Layout/Navigation.css
@@ -13,7 +13,6 @@
 
 .link {
   display: inline-block;
-  padding: 10px 20px;
 }
 
 .active {
